# robot-arm-5dof-end-effector-comvis-ai

./: .gitignore  AGENTS.md  blueprint.md  claude.md
assets/: kacamata_kamera.npz
docs/: PHASE10_SINGLE_OBJECT_PICK_PLACE.md  PHASE11_ROBOT_ALIGNMENT_CORRECTION.md  PHASE12_TEACH_POSES.md  PHASE6_SERIAL_TESTING.md  PHASE7_MANUAL_MOVE_TESTING.md  PHASE8_IK_TO_MOVE_SAFE_TESTING.md  PHASE9_YOLO_TO_IK_MOVE_SAFE.md
ros2_ws/src/robot_arm_5dof/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_arm_5dof/config/: aruco_config.yaml  aruco_homography.yaml  board_config.yaml  camera_config.yaml  homography.npy  homography.yaml  ik_reference_samples.yaml  ik_servo_calibration.yaml  pick_place_config.yaml  pose_config.yaml  robot_alignment_correction.yaml  robot_board_transform.yaml  robot_kinematics.yaml  semi_auto_pick_place_config.yaml  serial_config.yaml  servo_config.yaml  servo_direction_observations.yaml  taught_pick_place_poses.yaml  workspace_correction_map.yaml
ros2_ws/src/robot_arm_5dof/launch/: robot_bringup.launch.py
ros2_ws/src/robot_arm_5dof/robot_arm_5dof/: robot_arm_5dof_node.py  utils.py
tools/: README.md  analyze_ik_servo_convention.py  aruco_utils.py  calibrate_aruco_board_homography.py  calibrate_aruco_tcp_offset.py  calibrate_board_homography.py  calibrate_robot_alignment.py  compare_ik_to_reference.py  ik_servo_calibration_utils.py  servo_pose_calibration_gui.py  sweep_ik_targets.py  teach_servo_poses.py  test_aruco_detection.py  test_aruco_gripper_target_error.py  test_board_to_robot_transform.py  test_corrected_ik_to_move_safe.py  test_ik_dry_run.py  (+13 more)
(+1 files in other folders)
